--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 
-		<script src="/client-config.js"></script>
+		<script src="/partials-loader"></script>
 		<script src="/public/js/bundle-loader.js"></script>
 
 	</head>
