partials page, handlebars extension

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -1,4 +1,6 @@
-<section id="{{partialId}}">{{{partialHTML}}}</section>
-<script>
-	{{{partialScript}}}
-</script>
+<h1>Ratings service</h1>
+
+<h3>Check out our partials:</h3>
+<ul>
+	<li><a href="/partials/Main">Main</a></li>
+</ul>
