quotes service more or less

--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -6,17 +6,46 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<link rel="shortcut icon" href="http://www.verint.com/web_resources/themes/verint/images/favicon.png" type="image/x-icon">
 
+		<style>
+			main { margin-top: 50px; }
+			.navbar-brand { padding: 0; }
+			.navbar-brand span { margin-left: 1em; display: inline-block; font-size: 75%; line-height: 50px;}
+			.navbar-brand img { height: 50px;  display: inline-block; }
+		</style>
 		{{{placeholder head}}}
 
 	</head>
 	<body>
 
-		<div class="container">
+	  	<nav class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="/">
+	          	<span>IAMFANBOY</span>
+	          	<img src="/public/img/logo-gloria.png" />
+	          </a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	            <li><a href="/">Home</a></li>
+	            <li><a href="/quotes">Quotes</a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>
+	    <main class="container">
 
 			{{{body}}}
 
-		</div>
+		</main>
 
 	</body>
 
